<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".kotlin.MainActivityKt">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/toolbar_compose_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/toolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="?attr/actionBarSize"-->
    <!--        android:background="@color/web_orange"-->
    <!--        android:textAlignment="center">-->

    <!--        <TextView-->
    <!--            android:id="@+id/toolbar_title"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:fontFamily="@font/poppins_medium"-->
    <!--            android:paddingBottom="9dp"-->
    <!--            android:text="@string/activity"-->
    <!--            android:textAlignment="center"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="14sp" />-->
    <!--    </androidx.appcompat.widget.Toolbar>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_rounded_corners_bg"
        app:tabGravity="fill"
        app:tabIndicator="@drawable/tab_indicator_left"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="stretch"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/black" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/start_stop_field_compose_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--    <include-->
    <!--        android:id="@+id/include_start_stop_field"-->
    <!--        layout="@layout/start_stop_field"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/dialog_container"
        android:name="com.example.task3benchmarks.kotlin.EnterDialogKt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout="@layout/dialog_enter" />

</LinearLayout>
