<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_stop_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/start_stop_input_layout"
        style="@style/CustomTextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_stop_input"
            style="@style/CustomTextInputEditText.FilledBox"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/start_stop_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-90dp"
        android:background="@drawable/start_stop_button_rectangle"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/start_button_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/web_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_stop_input_layout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
