<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="9dp"
        android:text="@string/enter_dialog_collections_message"
        android:textAppearance="@style/enterDialogMessageTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_input_layout"
        style="@style/CustomTextInputLayout.FilledBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_input"
            style="@style/CustomTextInputEditText.FilledBox"
            android:hint="@string/dialog_input_collections_hint_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="315dp"
        android:layout_height="62dp"
        android:layout_marginBottom="39dp"
        android:backgroundTint="@color/web_orange"
        android:fontFamily="@font/poppins_500"
        android:text="@string/dialog_btn_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>